(library
 (name tsync_frontend)
 (wrapped false)
 (library_flags (-linkall))
 (libraries
  tsync_frontend_register
  (select
   frontend_fuse.ml
   from
   (tsync_fuse_frontend -> frontend_fuse.enabled.ml)
   (-> frontend_fuse.disabled.ml))
  (select
   frontend_file_provider.ml
   from
   (tsync_file_provider_frontend -> frontend_file_provider.enabled.ml)
   (-> frontend_file_provider.disabled.ml))))
