(library
 (name tsync_linux_runtime)
 (wrapped false)
 (enabled_if
  (= %{system} linux))
 (modules linux_runtime))

(library
 (name tsync_macos_runtime)
 (wrapped false)
 (enabled_if
  (= %{system} macosx))
 (modules macos_runtime))

(library
 (name tsync_runtime)
 (wrapped false)
 (modules runtime)
 (libraries
  (select
   runtime.ml
   from
   (tsync_linux_runtime -> runtime.linux.ml)
   (tsync_macos_runtime -> runtime.macos.ml))))
