(executable
 (name exec_backend_test)
 (libraries
  tsync_exec_backend
  tsync_backend_register
  yojson
  unix
  lwt
  lwt.unix))

(alias
 (name default)
 (deps exec_backend_test.exe))

(rule
 (alias runtest)
 (target exec_backend_test.output)
 (action
  (with-stdout-to
   exec_backend_test.output
   (run ./exec_backend_test.exe))))

(rule
 (alias runtest)
 (action
  (diff exec_backend_test.expected exec_backend_test.output)))
