(executable
 (name sync)
 (libraries tsync_test_runner))

(alias
 (name default)
 (deps sync.exe))

(rule
 (alias runtest)
 (target sync.output)
 (action
  (with-stdout-to
   sync.output
   (ignore-stderr
    (run ./sync.exe)))))

(rule
 (alias runtest)
 (action
  (diff sync.expected sync.output)))
