(executable
 (name versioning)
 (libraries tsync_test_runner))

(alias
 (name default)
 (deps versioning.exe))

(rule
 (alias runtest)
 (target versioning.output)
 (action
  (with-stdout-to
   versioning.output
   (ignore-stderr
    (run ./versioning.exe)))))

(rule
 (alias runtest)
 (action
  (diff versioning.expected versioning.output)))
